상세정보 데이터 띄우기(불안정)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sanitize": "^2.1.0",
+    "sanitize-html": "^2.6.1"
   },
   "devDependencies": {
     "i": "^0.3.7",
